@@ -14,6 +14,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 }
 
 publishing {
